Fix footer non mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,6 +50,8 @@ html,body, #wrapper {
 
 .container {
   width: auto;
+  margin-bottom: -10px;
   padding: 0 15px;
   text-align: right;
+  font-size: 1.1em;
 }
